[package]
name = "rust-sokoban"
description = "A Sokoban game written in Rust."
keywords = ["sokoban", "game"]
version = "0.1.0"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = { version = "0.16.1", features = ["specs-derive"] }
itertools = "0.9.0"
